--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="img/favicon.ico">
 </head>
 
 <body>
@@ -52,11 +53,11 @@
                 <a class="application-link" href="https://github.com/mkconan/CrowdSourcingWebSearch" target="_blank"
                     rel="noopener noreferrer">
                     <div class="application-card-img">
-                        <img src="img/CrowdWorksSearch-イメージ画像.png" alt="サンプル画像">
+                        <img src="img/CrowdWorksSearch-イメージ画像.png" alt="ソフトのイメージ画像">
                     </div>
                     <div class="application-card-content">
                         <div class="application-card-title">
-                            CrowdWorks新規案件通知ソフト
+                            CrowdWorks<br>案件通知ソフト
                         </div>
                         <div class="application-card-summary">
                             CrowdWorksで、任意の検索ワードに該当する新規案件があった場合、Slackで通知する。
@@ -69,14 +70,31 @@
                 <a class="application-link" href="https://github.com/mkconan/AutoUpdateMoneyForward" target="_blank"
                     rel="noopener noreferrer">
                     <div class="application-card-img">
-                        <img src="img/AutoUpdateMoneyforward-イメージ画像.png" alt="サンプル画像">
+                        <img src="img/AutoUpdateMoneyforward-イメージ画像.png" alt="ソフトのイメージ画像">
                     </div>
                     <div class="application-card-content">
                         <div class="application-card-title">
-                            MoneyForward自動一括更新ソフト
+                            MoneyForward<br>自動更新ソフト
                         </div>
                         <div class="application-card-summary">
-                            MoneyForwardの連携口座を自動で更新する。
+                            MoneyForwardの連携口座を自動で一括更新する。
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="application-card">
+                <a class="application-link" href="https://github.com/mkconan/PortfolioSite" target="_blank"
+                    rel="noopener noreferrer">
+                    <div class="application-card-img">
+                        <img src="img/PortfolioSite-イメージ画像.png" alt="ソフトのイメージ画像">
+                    </div>
+                    <div class="application-card-content">
+                        <div class="application-card-title">
+                            ポートフォリオ<br>サイト
+                        </div>
+                        <div class="application-card-summary">
+                            このサイトのソースコード
                         </div>
                     </div>
                 </a>
